MAPREDUCE-1706. Log RAID recoveries on HDFS. (schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1067049 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2263. MapReduce side of HADOOP-6904: RPC compatibility.
     (hairong)
 
+    MAPREDUCE-1706. Log RAID recoveries on HDFS. (schen)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
