MAPREDUCE-2077. Resolve name clash in the deprecated o.a.h.util.MemoryCalculatorPlugin Contributed by Luke Lu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1067068 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -532,6 +532,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2200. TestUmbilicalProtocolWithJobToken is failing without Krb
     evironment: needs to be conditional. (cos)
 
+    MAPREDUCE-2077. Resolve name clash in the deprecated 
+    o.a.h.util.MemoryCalculatorPlugin (Luke Lu via shv)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
