HDFS-1529. Incorrect handling of interrupts in waitForAckedSeqno can cause deadlock. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1067288 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -525,6 +525,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-900. Corrupt replicas are not processed correctly in block report (shv)
 
+    HDFS-1529. Incorrect handling of interrupts in waitForAckedSeqno can cause
+    deadlock (todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
