MAPREDUCE-2304. Fix TestMRCLI to allow hostname with a hyphen (-). Contributed by Priyo Mustafi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1067347 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -544,6 +544,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-1974. Fix multiple preemtions of the same task in FairScheduler.
     (Scott Chen via shv)
 
+    MAPREDUCE-2304. Fix TestMRCLI to allow hostname with a hyphen (-).
+    (Priyo Mustafi via shv)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
