--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -551,6 +551,9 @@ Release 0.22.0 - Unreleased
     call finishedMaps and finishedReduces when job is not initialized.
     (Scott Chen via shv)
 
+    MAPREDUCE-2285. MiniMRCluster does not start after ant test-patch
+    (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
