HDFS-1602. Fix HADOOP-4885 for it is doesn't work as expected
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1068230 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -87,6 +87,8 @@ Trunk (unreleased changes)
     HDFS-1607. Fix referenced to misspelled method name getProtocolSigature
     (todd)
 
+    HDFS-1602. Fix HADOOP-4885 for it is doesn't work as expected. (boryas)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
