HDFS-560 build file tuning to changes.txt
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1068619 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -50,6 +50,8 @@ Trunk (unreleased changes)
     HDFS-1335. HDFS side change of HADDOP-6904: RPC compatibility. (hairong)
 
     HDFS-1557. Separate Storage from FSImage. (Ivan Kelly via jitendra)
+    
+    HDFS-560 Enhancements/tuning to hadoop-hdfs/build.xml
 
   OPTIMIZATIONS
 
