HDFS-1597. Batched edit log syncs can reset synctxid and throw assertions. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1068721 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -534,6 +534,9 @@ Release 0.22.0 - Unreleased
     HDFS-1529. Incorrect handling of interrupts in waitForAckedSeqno can cause
     deadlock (todd)
 
+    HDFS-1597. Batched edit log syncs can reset synctxid and throw assertions
+    (todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
