HDFS-1600. Fix release audit warnings on trunk. Contributedy by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1068968 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -93,6 +93,8 @@ Trunk (unreleased changes)
 
     HDFS-1602. Fix HADOOP-4885 for it is doesn't work as expected. (boryas)
 
+    HDFS-1600. Fix release audit warnings on trunk. (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
