MAPREDUCE-2311. Fix TestFairScheduler failure (schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1069139 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -64,6 +64,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2296. Fix references to misspelled method name
     getProtocolSigature (todd)
 
+    MAPREDUCE-2311. Fix TestFairScheduler failure (schen)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
