MAPREDUCE-2315. javadoc is failing in nightly build. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1069255 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -556,6 +556,8 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2285. MiniMRCluster does not start after ant test-patch
     (todd)
 
+    MAPREDUCE-2315. javadoc is failing in nightly build (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
