--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -539,6 +539,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1602. Fix HADOOP-4885 for it is doesn't work as expected. (boryas)
 
+    HDFS-1618. configure files that are generated as part of the released
+    tarball need to have executable bit set (Roman Shaposhnik via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
