--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -542,6 +542,8 @@ Release 0.22.0 - Unreleased
     HDFS-1618. configure files that are generated as part of the released
     tarball need to have executable bit set (Roman Shaposhnik via cos)
 
+    HDFS-981. test-contrib fails due to test-cactus failure (cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
