--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -253,6 +253,9 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2260. Remove auto-generated native build files. (rvs via eli)
 
+    MAPREDUCE-2314. configure files that are generated as part of the released
+    tarball need to have executable bit set (rvs via cos)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
