MAPREDUCE-2334. Update BlockPlacementPolicyRaid for the new method in BlockPlacementPolicy.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1072032 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1706. Log RAID recoveries on HDFS. (schen)
 
+    MAPREDUCE-2334. Update BlockPlacementPolicyRaid for the new method
+    in BlockPlacementPolicy.  (szetszwo)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
