MAPREDUCE-2254. Allow setting of end-of-record delimiter for TextInputFormat. Contributed by Ahmed Radwan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1074055 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2334. Update BlockPlacementPolicyRaid for the new method
     in BlockPlacementPolicy.  (szetszwo)
 
+    MAPREDUCE-2254. Allow setting of end-of-record delimiter for
+    TextInputFormat (Ahmed Radwan via todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
