MAPREDUCE-2054. Hierarchical queue implementation broke dynamic queue addition in Dynamic Scheduler. Contributed by Thomas Sandholm.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1075211 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -567,6 +567,9 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2315. javadoc is failing in nightly build (todd)
 
+    MAPREDUCE-2054. Hierarchical queue implementation broke dynamic queue
+    addition in Dynamic Scheduler. (Thomas Sandholm via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
