--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -271,6 +271,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2314. configure files that are generated as part of the released
     tarball need to have executable bit set (rvs via cos)
 
+    MAPREDUCE-1159.  Limit Job name in web UI to be 80 char long.  (Harsh J
+    Chouraria via szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
