MAPREDUCE-2206. The task-cleanup tasks should be optional. (schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1075569 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1927. Unit test for HADOOP-6835 (concatenated gzip support).
     (Greg Roelofs via tomwhite)
 
+    MAPREDUCE-2206. The task-cleanup tasks should be optional. (schen)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
