MAPREDUCE-2074. Task should fail when symlink creation fails. Contributed by Priyo Mustafi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1075670 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -83,6 +83,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2203. Wrong javadoc for TaskRunner's appendJobJarClasspaths
     method. (Jingguo Yao via tomwhite)
 
+    MAPREDUCE-2074. Task should fail when symlink creation fails.
+    (Priyo Mustafi via tomwhite)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
