MAPREDUCE-1811. Job.monitorAndPrintJob() should print status of the job at completion. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1076109 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -43,6 +43,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2225. MultipleOutputs should not require the use of 'Writable'.
     (Harsh J Chouraria via tomwhite)
 
+    MAPREDUCE-1811. Job.monitorAndPrintJob() should print status of the job
+    at completion. (Harsh J Chouraria via tomwhite)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
