HDFS-1691. Remove a duplicated static initializer for reading default configurations in DFSck.  Contributed by Alexey Diomin
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1076696 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -101,6 +101,9 @@ Trunk (unreleased changes)
 
     HDFS-1600. Fix release audit warnings on trunk. (todd)
 
+    HDFS-1691. Remove a duplicated static initializer for reading default
+    configurations in DFSck.  (Alexey Diomin via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
