MAPREDUCE-2351. mapred.job.tracker.history.completed.location should support an arbitrary filesystem URI.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1076804 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2302. Add static factory methods in GaloisField. (schen)
 
+    MAPREDUCE-2351. mapred.job.tracker.history.completed.location should
+    support an arbitrary filesystem URI. (tomwhite)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
