--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -100,6 +100,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2074. Task should fail when symlink creation fails.
     (Priyo Mustafi via tomwhite)
 
+    MAPREDUCE-1242. Chain APIs error misleading.
+    (Harsh J Chouraria via tomwhite)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
