MAPREDUCE-2239. BlockPlacementPolicyRaid should call getBlockLocations only when necessary. (schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078081 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2351. mapred.job.tracker.history.completed.location should
     support an arbitrary filesystem URI. (tomwhite)
 
+    MAPREDUCE-2239. BlockPlacementPolicyRaid should call getBlockLocations
+    only when necessary. (schen)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
