MAPREDUCE-2272. Job ACL file should not be executable. Contributed by Harsh J Chouraria
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -607,6 +607,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2054. Hierarchical queue implementation broke dynamic queue
     addition in Dynamic Scheduler. (Thomas Sandholm via tomwhite)
 
+    MAPREDUCE-2272. Job ACL file should not be executable
+    (Harsh J Chouraria via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
