--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -610,6 +610,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2272. Job ACL file should not be executable
     (Harsh J Chouraria via todd)
 
+    MAPREDUCE-2241. ClusterWithLinuxTaskController should accept relative path
+    on the command line. (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
