MAPREDUCE-2251. Remove unused mapreduce.job.userhistorylocation config. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078668 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -613,6 +613,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2241. ClusterWithLinuxTaskController should accept relative path
     on the command line. (todd)
 
+    MAPREDUCE-2251. Remove unused mapreduce.job.userhistorylocation config.
+    (Harsh J Chouraria via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
