MAPREDUCE-2331. Add coverage of task graph servlet to fair scheduler system test. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078708 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -57,6 +57,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2239. BlockPlacementPolicyRaid should call getBlockLocations
     only when necessary. (schen)
 
+    MAPREDUCE-2331. Add coverage of task graph servlet to fair scheduler system
+    test. (todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
