MAPREDUCE-2284. TestLocalRunner.testMultiMaps times out. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078931 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -619,6 +619,8 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2251. Remove unused mapreduce.job.userhistorylocation config.
     (Harsh J Chouraria via todd)
 
+    MAPREDUCE-2284. TestLocalRunner.testMultiMaps times out (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
