MAPREDUCE-2336. Tool-related packages should be in the Tool javadoc group.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1078964 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -621,6 +621,9 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2284. TestLocalRunner.testMultiMaps times out (todd)
 
+    MAPREDUCE-2336. Tool-related packages should be in the Tool javadoc group.
+    (tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
