MAPREDUCE-2367. Allow using a file to exclude certain tests from build. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1079072 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2331. Add coverage of task graph servlet to fair scheduler system
     test. (todd)
 
+    MAPREDUCE-2367. Allow using a file to exclude certain tests from build.
+    (todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
