HDFS-1738. change hdfs jmxget to return an empty string instead of null when an attribute value is not available
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1080380 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -109,6 +109,9 @@ Trunk (unreleased changes)
     HDFS-1691. Remove a duplicated static initializer for reading default
     configurations in DFSck.  (Alexey Diomin via szetszwo)
 
+    HDFS-1738. change hdfs jmxget to return an empty string instead of 
+    null when an attribute value is not available (tanping vi boryas)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
