--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -65,6 +65,9 @@ Trunk (unreleased changes)
 
     HDFS-1736. Remove the dependency from DatanodeJspHelper to FsShell.
     (Daryn Sharp via szetszwo)
+    
+    HDFS-1731. Amend previous commit for this JIRA to fix build on Cygwin.
+    (todd)
 
   OPTIMIZATIONS
 
