HDFS-1748. Balancer utilization classification is incomplete.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1080836 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -115,6 +115,8 @@ Trunk (unreleased changes)
     HDFS-1738. change hdfs jmxget to return an empty string instead of 
     null when an attribute value is not available (tanping vi boryas)
 
+    HDFS-1748. Balancer utilization classification is incomplete.  (szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
