MAPREDUCE-2379. Adds missing DistributedCache configurations in mapred-default.xml. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1081280 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -115,6 +115,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1242. Chain APIs error misleading.
     (Harsh J Chouraria via tomwhite)
 
+    MAPREDUCE-2379. Adds missing DistributedCache configurations in 
+    mapred-default.xml (Todd Lipcon via amareshwari)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
