--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,8 @@ Trunk (unreleased changes)
 
     HDFS-1626. Make BLOCK_INVALIDATE_LIMIT configurable. (szetszwo)
 
+    HDFS-1675. Support transferring RBW between datanodes. (szetszwo)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
