HDFS-1757. Don't compile fuse-dfs by default. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1081904 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -121,6 +121,8 @@ Trunk (unreleased changes)
 
     HDFS-1748. Balancer utilization classification is incomplete.  (szetszwo)
 
+    HDFS-1757. Don't compile fuse-dfs by default. (eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
