MAPREDUCE-2348. Disable mumak tests on trunk since they currently time out. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1082400 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -118,6 +118,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2379. Adds missing DistributedCache configurations in 
     mapred-default.xml (Todd Lipcon via amareshwari)
 
+    MAPREDUCE-2348. Disable mumak tests on trunk since they currently time out
+    (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
