MAPREDUCE-2394. JUnit output format doesn't propagate into raid contrib build. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1082617 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -635,6 +635,9 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-2336. Tool-related packages should be in the Tool javadoc group.
     (tomwhite)
+    
+    MAPREDUCE-2394. JUnit output format doesn't propagate into raid contrib
+    build. (todd)
 
 Release 0.21.1 - Unreleased
 
