HDFS-1445. Batch the calls in DataStorage to FileUtil.createHardLink(). Contributed by Matt Foley.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1083021 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -73,6 +73,9 @@ Trunk (unreleased changes)
 
     HDFS-780. Revive TestFuseDFS. (eli)
 
+    HDFS-1445. Batch the calls in DataStorage to FileUtil.createHardLink().
+    (Matt Foley via jghoman)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
