--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -129,6 +129,8 @@ Trunk (unreleased changes)
 
     HDFS-1757. Don't compile fuse-dfs by default. (eli)
 
+    HDFS-1770. TestFiRename fails due to invalid block size. (eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
