--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -79,6 +79,9 @@ Trunk (unreleased changes)
     HDFS-1763. Replace hard-coded option strings with variables from
     DFSConfigKeys. (eli)
 
+    HDFS-1541. Not marking datanodes dead when namenode in safemode.
+    (hairong)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
