--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -646,6 +646,9 @@ Release 0.21.1 - Unreleased
     HDFS-1596. Replace fs.checkpoint.* with dfs.namenode.checkpoint.*
     in documentations.  (Harsh J Chouraria via szetszwo)
 
+    HDFS-1786. Some cli test cases expect a "null" message
+    (Uma Maheswara Rao G via todd)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
