HDFS-1797. Fix new findbugs warning introduced by HDFS-1120. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1086820 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -147,6 +147,8 @@ Trunk (unreleased changes)
 
     HDFS-1770. TestFiRename fails due to invalid block size. (eli)
 
+    HDFS-1797. Fix new findbugs warning introduced by HDFS-1120 (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
