--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -601,6 +601,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1781. Fix the path for jsvc in bin/hdfs.  (John George via szetszwo)
 
+    HDFS-1782. Fix an NPE in RFSNamesystem.startFileInternal(..).
+    (John George via szetszwo)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
