HDFS-1611. Fix up some log messages in DFSClient and MBean registration. Contributed by Uma Maheswara Rao G.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1087160 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -146,6 +146,9 @@ Trunk (unreleased changes)
 
     HDFS-1797. Fix new findbugs warning introduced by HDFS-1120 (todd)
 
+    HDFS-1611. Fix up some log messages in DFSClient and MBean registration
+    (Uma Maheswara Rao G via todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
