HDFS-1543. Reduce dev. cycle time by moving system testing artifacts from default build and push to maven for HDFS. Contributed by Luke Lu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1087900 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -153,6 +153,9 @@ Trunk (unreleased changes)
     HDFS-1611. Fix up some log messages in DFSClient and MBean registration
     (Uma Maheswara Rao G via todd)
 
+    HDFS-1543. Reduce dev. cycle time by moving system testing artifacts from
+    default build and push to maven for HDFS (Luke Lu via cos)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
