--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -121,6 +121,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2348. Disable mumak tests on trunk since they currently time out
     (todd)
 
+    MAPREDUCE-2395. TestBlockFixer timing out on trunk. (Ramkumar Vadali via
+    todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
