MAPREDUCE-2426. Make TestFairSchedulerSystem fail with more verbose output. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1090390 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -124,6 +124,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2395. TestBlockFixer timing out on trunk. (Ramkumar Vadali via
     todd)
 
+    MAPREDUCE-2426. Make TestFairSchedulerSystem fail with more verbose output
+    (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
