HDFS-1606. Provide a stronger data guarantee in the write pipeline by adding a new datanode when an existing datanode failed.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1091515 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,9 @@ Trunk (unreleased changes)
 
     HDFS_1630. Support fsedits checksum. (hairong)
 
+    HDFS-1606. Provide a stronger data guarantee in the write pipeline by
+    adding a new datanode when an existing datanode failed.  (szetszwo)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
