HDFS-1760. In FSDirectory.getFullPathName(..), it is better to return "/" for root directory instead of an empty string.  Contributed by Daryn Sharp
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1091874 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -106,6 +106,9 @@ Trunk (unreleased changes)
     HDFS-1817. Move pipeline_Fi_[39-51] from TestFiDataTransferProtocol
     to TestFiPipelineClose.  (szetszwo)
 
+    HDFS-1760. In FSDirectory.getFullPathName(..), it is better to return "/"
+    for root directory instead of an empty string.  (Daryn Sharp via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
