HDFS-1828. TestBlocksWithNotEnoughRacks intermittently fails assert. Contributed by Matt Foley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1092391 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -172,6 +172,9 @@ Trunk (unreleased changes)
     HDFS-1818. TestHDFSCLI is failing on trunk after HADOOP-7202.
     (Aaron T. Myers via todd)
 
+    HDFS-1828. TestBlocksWithNotEnoughRacks intermittently fails assert.
+    (Matt Foley via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
